Step by step talk done through backpropogation part 3

--- a/lunch_and_learn_6_15.ipynb
+++ b/lunch_and_learn_6_15.ipynb
@@ -294,14 +294,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "**Imports**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -341,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -355,9 +359,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -377,20 +380,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of images:  70000\n"
+     ]
+    }
+   ],
    "source": [
     "X, Y = get_mnist_X_Y(mnist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -430,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -448,13 +459,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label:  0\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAD8CAYAAAC4nHJkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADnBJREFUeJzt3X+sVPWZx/HPoy3+IZigXMmNyN5uJU2MiYAjWVOiXbpU\nMURsTBSilY1aiFbdRjQa9o8lyh8ErQ2JayNdSbmk0pqAQpTs1iX+SBOtDHgRrV1xzW2A8OOiDUg0\nsMKzf9xDc6v3fGeYOTNn7n3er+TmzpznnHuejH44M+d75nzN3QUgnrPKbgBAOQg/EBThB4Ii/EBQ\nhB8IivADQRF+ICjCDwRF+IGgvtHOnU2YMMF7enrauUsglP7+fh0+fNjqWbep8JvZdZJWSTpb0n+4\n+4rU+j09PapWq83sEkBCpVKpe92G3/ab2dmS/l3SHEmXSlpgZpc2+vcAtFczn/lnSPrI3T929xOS\nfiNpXjFtAWi1ZsJ/kaQ9Q57vzZb9DTNbZGZVM6sODAw0sTsARWr52X53X+3uFXevdHV1tXp3AOrU\nTPj3Sbp4yPNJ2TIAI0Az4d8maYqZfcvMxkiaL2lzMW0BaLWGh/rc/Uszu1fSf2lwqG+Nu79fWGcA\nWqqpcX533yJpS0G9AGgjLu8FgiL8QFCEHwiK8ANBEX4gKMIPBEX4gaAIPxAU4QeCIvxAUIQfCIrw\nA0ERfiAowg8ERfiBoAg/EBThB4Ii/EBQhB8IivADQRF+IKi2TtGN0Wf79u3J+lNPPZVb6+3tTW57\n++23J+v33Xdfsj59+vRkPTqO/EBQhB8IivADQRF+ICjCDwRF+IGgCD8QVFPj/GbWL+kzSSclfenu\nlSKaQufo6+tL1mfPnp2sHz16NLdmZslt161bl6xv3rw5Wf/kk0+S9eiKuMjnH939cAF/B0Ab8bYf\nCKrZ8Luk35nZdjNbVERDANqj2bf9M919n5ldKOkVM/uTu78xdIXsH4VFkjR58uQmdwegKE0d+d19\nX/b7kKQXJM0YZp3V7l5x90pXV1czuwNQoIbDb2bnmtm4048l/UDSe0U1BqC1mnnbP1HSC9lwzTck\nPefu/1lIVwBaruHwu/vHki4vsBeU4O23307Wb7rppmT9yJEjyXpqLH/cuHHJbceMGZOs1xrHf/PN\nN3NrV1xxRVP7Hg0Y6gOCIvxAUIQfCIrwA0ERfiAowg8Exa27R4HPP/88t7Zjx47ktrfddluyvn//\n/oZ6qscll1ySrD/88MPJ+vz585P1mTNn5tYee+yx5LZLly5N1kcDjvxAUIQfCIrwA0ERfiAowg8E\nRfiBoAg/EBTj/KPA4sWLc2vr169vYydn5p133knWjx07lqxfffXVyfrrr7+eW9u1a1dy2wg48gNB\nEX4gKMIPBEX4gaAIPxAU4QeCIvxAUIzzjwDbt29P1l9++eXcmrs3te9rrrkmWZ87d26y/tBDD+XW\nuru7k9tOmzYtWR8/fnyy/uqrr+bWmn1dRgOO/EBQhB8IivADQRF+ICjCDwRF+IGgCD8QVM1xfjNb\nI2mupEPuflm27HxJv5XUI6lf0s3u/pfWtTm69fX1JeuzZ89O1o8ePZpbS02RLUlz5sxJ1mvdD+C1\n115L1pcvX55bu+uuu5LbdnV1JeuXX56eIf6ss/KPbalrI6Ta8x1Mnz49WR8J6jny/0rSdV9Z9oik\nre4+RdLW7DmAEaRm+N39DUmffmXxPElrs8drJd1YcF8AWqzRz/wT3f30PE4HJE0sqB8AbdL0CT8f\nvEg690JpM1tkZlUzqw4MDDS7OwAFaTT8B82sW5Ky34fyVnT31e5ecfdKrRM4ANqn0fBvlrQwe7xQ\n0qZi2gHQLjXDb2brJb0p6TtmttfM7pS0QtJsM9st6Z+y5wBGkJrj/O6+IKf0/YJ7GbU+/PDDZH3l\nypXJ+pEjR5L1CRMm5NZqfWd+4cKFyfrYsWOT9Vrf569VL8sXX3yRrD/xxBPJ+nPPPVdkO6XgCj8g\nKMIPBEX4gaAIPxAU4QeCIvxAUNy6uwDHjx9P1h988MFkfcuWLcn6uHHjkvXe3t7cWqVSSW5ba8gr\nqj179pTdQstx5AeCIvxAUIQfCIrwA0ERfiAowg8ERfiBoBjnL0Ct2zzXGsevZdOm9L1Sak2jDQyH\nIz8QFOEHgiL8QFCEHwiK8ANBEX4gKMIPBMU4fwEeeOCBZH1wRrN8tcbpGcdvzKlTp3Jrqem7pdr/\nzUYDjvxAUIQfCIrwA0ERfiAowg8ERfiBoAg/EFTNcX4zWyNprqRD7n5ZtmyZpB9LGshWW+ruzX1p\nvcO99NJLubWdO3cmtzWzZP2GG25oqCekpcbya/03mTp1atHtdJx6jvy/knTdMMt/7u5Ts59RHXxg\nNKoZfnd/Q9KnbegFQBs185n/XjN718zWmNn4wjoC0BaNhv8Xkr4taaqk/ZJ+lreimS0ys6qZVQcG\nBvJWA9BmDYXf3Q+6+0l3PyXpl5JmJNZd7e4Vd690dXU12ieAgjUUfjPrHvL0h5LeK6YdAO1Sz1Df\neknfkzTBzPZK+jdJ3zOzqZJcUr+kxS3sEUAL1Ay/uy8YZvGzLeilo6XmsT9x4kRy2wsvvDBZv+WW\nWxrqabQ7fvx4sr5s2bKG//asWbOS9RUrVjT8t0cKrvADgiL8QFCEHwiK8ANBEX4gKMIPBMWtu9vg\nnHPOSda7u7uT9dGq1lDe8uXLk/XHH388WZ80aVJubcmSJcltx44dm6yPBhz5gaAIPxAU4QeCIvxA\nUIQfCIrwA0ERfiAoxvnbIPKtufv6+nJrK1euTG77/PPPJ+u1XteNGzcm69Fx5AeCIvxAUIQfCIrw\nA0ERfiAowg8ERfiBoBjnr5O7N1STpBdffDFZX7VqVUM9dYInn3wyWU99J//IkSPJbW+99dZkvbe3\nN1lHGkd+ICjCDwRF+IGgCD8QFOEHgiL8QFCEHwiq5ji/mV0sqVfSREkuabW7rzKz8yX9VlKPpH5J\nN7v7X1rXarnMrKGaJB04cCBZv//++5P1O+64I1m/4IILcmtvvfVWctt169Yl6zt37kzW9+7dm6xP\nnjw5t3bttdcmt73nnnuSdTSnniP/l5KWuPulkv5B0k/M7FJJj0ja6u5TJG3NngMYIWqG3933u/uO\n7PFnkj6QdJGkeZLWZqutlXRjq5oEULwz+sxvZj2Spkn6g6SJ7r4/Kx3Q4McCACNE3eE3s7GSNkj6\nqbsfHVrzwYvbh73A3cwWmVnVzKoDAwNNNQugOHWF38y+qcHg/9rdT98V8aCZdWf1bkmHhtvW3Ve7\ne8XdK11dXUX0DKAANcNvg6eyn5X0gbsP/QrXZkkLs8cLJW0qvj0ArVLPV3q/K+lHknaZ2en7MC+V\ntELS82Z2p6Q/S7q5NS2OfCdPnkzWn3766WR9w4YNyfp5552XW9u9e3dy22ZdddVVyfqsWbNya48+\n+mjR7eAM1Ay/u/9eUt5A9veLbQdAu3CFHxAU4QeCIvxAUIQfCIrwA0ERfiAobt1dp9R49pVXXpnc\ndtu2bU3tu9ZXgg8ePNjw3059HViS5s+fn6yP5NuOR8eRHwiK8ANBEX4gKMIPBEX4gaAIPxAU4QeC\nYpy/TpMmTcqtbdy4MbcmSc8880yynprGulm1bgt+9913J+tTpkwpsh10EI78QFCEHwiK8ANBEX4g\nKMIPBEX4gaAIPxCUDc601R6VSsWr1Wrb9gdEU6lUVK1W03PGZzjyA0ERfiAowg8ERfiBoAg/EBTh\nB4Ii/EBQNcNvZheb2atm9kcze9/M/iVbvszM9plZX/ZzfevbBVCUem7m8aWkJe6+w8zGSdpuZq9k\ntZ+7+xOtaw9Aq9QMv7vvl7Q/e/yZmX0g6aJWNwagtc7oM7+Z9UiaJukP2aJ7zexdM1tjZuNztllk\nZlUzqw4MDDTVLIDi1B1+MxsraYOkn7r7UUm/kPRtSVM1+M7gZ8Nt5+6r3b3i7pWurq4CWgZQhLrC\nb2bf1GDwf+3uGyXJ3Q+6+0l3PyXpl5JmtK5NAEWr52y/SXpW0gfu/uSQ5d1DVvuhpPeKbw9Aq9Rz\ntv+7kn4kaZeZ9WXLlkpaYGZTJbmkfkmLW9IhgJao52z/7yUN9/3gLcW3A6BduMIPCIrwA0ERfiAo\nwg8ERfiBoAg/EBThB4Ii/EBQhB8IivADQRF+ICjCDwRF+IGgCD8QVFun6DazAUl/HrJogqTDbWvg\nzHRqb53al0RvjSqyt79z97rul9fW8H9t52ZVd6+U1kBCp/bWqX1J9NaosnrjbT8QFOEHgio7/KtL\n3n9Kp/bWqX1J9NaoUnor9TM/gPKUfeQHUJJSwm9m15nZ/5jZR2b2SBk95DGzfjPblc08XC25lzVm\ndsjM3huy7Hwze8XMdme/h50mraTeOmLm5sTM0qW+dp0243Xb3/ab2dmSPpQ0W9JeSdskLXD3P7a1\nkRxm1i+p4u6ljwmb2dWSjknqdffLsmUrJX3q7iuyfzjHu/vDHdLbMknHyp65OZtQpnvozNKSbpT0\nzyrxtUv0dbNKeN3KOPLPkPSRu3/s7ick/UbSvBL66Hju/oakT7+yeJ6ktdnjtRr8n6ftcnrrCO6+\n3913ZI8/k3R6ZulSX7tEX6UoI/wXSdoz5PleddaU3y7pd2a23cwWld3MMCZm06ZL0gFJE8tsZhg1\nZ25up6/MLN0xr10jM14XjRN+XzfT3adLmiPpJ9nb247kg5/ZOmm4pq6Zm9tlmJml/6rM167RGa+L\nVkb490m6eMjzSdmyjuDu+7LfhyS9oM6bffjg6UlSs9+HSu7nrzpp5ubhZpZWB7x2nTTjdRnh3yZp\nipl9y8zGSJovaXMJfXyNmZ2bnYiRmZ0r6QfqvNmHN0tamD1eKGlTib38jU6ZuTlvZmmV/Np13IzX\n7t72H0nXa/CM//9K+tcyesjp6+8l7cx+3i+7N0nrNfg28P80eG7kTkkXSNoqabek/5Z0fgf1tk7S\nLknvajBo3SX1NlODb+nfldSX/Vxf9muX6KuU140r/ICgOOEHBEX4gaAIPxAU4QeCIvxAUIQfCIrw\nA0ERfiCo/wfKBnT2y+G31wAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x116ae8ac8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "visualize_image(0)"
    ]
@@ -483,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -498,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -539,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -558,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -572,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -586,13 +615,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neural Net MNIST Classification Accuracy: 91.3 percent\n"
+     ]
+    }
+   ],
    "source": [
     "preds = [np.argmax(x) for x in P]\n",
     "actuals = [np.argmax(x) for x in Y_test]\n",
@@ -763,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -815,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -866,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -920,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -950,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -965,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -981,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -1010,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -1028,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1045,13 +1082,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neural Net MNIST Classification Accuracy: 82.3 percent\n"
+     ]
+    }
+   ],
    "source": [
     "P = nn_mnist.forwardpass(X_test)\n",
     "preds = [np.argmax(x) for x in P]\n",
@@ -1087,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -1146,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -1155,16 +1200,16 @@
    },
    "outputs": [],
    "source": [
-    "input_layer = Linear(n_in=784, n_out=50, activation_function=sigmoid)\n",
-    "hidden_1 = Linear(n_in=50, n_out=50, activation_function=sigmoid)\n",
+    "input_layer = Linear(n_in=784, n_out=75, activation_function=sigmoid)\n",
+    "hidden_1 = Linear(n_in=75, n_out=50, activation_function=sigmoid)\n",
     "hidden_2 = Linear(n_in=50, n_out=50, activation_function=sigmoid)\n",
-    "hidden_3 = Linear(n_in=50, n_out=50, activation_function=sigmoid)\n",
-    "output_layer = Linear(n_in=50, n_out=10, activation_function=sigmoid)"
+    "hidden_3 = Linear(n_in=50, n_out=25, activation_function=sigmoid)\n",
+    "output_layer = Linear(n_in=25, n_out=10, activation_function=sigmoid)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -1197,13 +1242,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accuracy of a network with one hidden layer was 82.3\n"
+     ]
+    }
+   ],
    "source": [
     "accuracy = print_accuracy_net_layers([input_layer, \n",
     "                                      output_layer])\n",
@@ -1212,13 +1265,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accuracy of a network with two hidden layers was 90.7\n"
+     ]
+    }
+   ],
    "source": [
     "accuracy = print_accuracy_net_layers([input_layer, \n",
     "                                      hidden_1, \n",
@@ -1228,13 +1289,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accuracy of a network with three hidden layers was 88.0\n"
+     ]
+    }
+   ],
    "source": [
     "accuracy = print_accuracy_net_layers([input_layer, \n",
     "                                      hidden_1, \n",
@@ -1245,13 +1314,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accuracy of a network with four hidden layers was 87.9\n"
+     ]
+    }
+   ],
    "source": [
     "accuracy = print_accuracy_net_layers([input_layer, \n",
     "                                      hidden_1, \n",
