Add Logistic Regression link

--- a/neural_nets_step_by_step.ipynb
+++ b/neural_nets_step_by_step.ipynb
@@ -3111,6 +3111,17 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Note: you can get [92% accuracy on MNIST using Logistic Regression](https://www.tensorflow.org/get_started/mnist/beginners). In this case, we didn't let our net run long enough for the accuracy to get that high. I ran the net for one epoch just to have an apples-to-apples comparision between this an a neural net with one hidden layer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "subslide"
     }
    },
@@ -3272,7 +3283,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## Understanding the hidden nodes"
    ]
@@ -3280,7 +3295,11 @@
   {
    "cell_type": "code",
    "execution_count": 310,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -3308,8 +3327,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
-   "metadata": {},
+   "execution_count": 313,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -3319,19 +3342,23 @@
        "        4, 12,  7, 14, 24, 38,  2, 48, 22, 17, 19, 37,  3, 46, 42, 30])"
       ]
      },
-     "execution_count": 311,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.argsort(np.abs(W[:, 4]), )"
+    "np.argsort(np.abs(W[:, 4]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 308,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -3357,6 +3384,18 @@
    "source": [
     "mean_4 = x4.mean(axis=0)\n",
     "plt.imshow(1.0 - mean_4.reshape(28,28), cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def visualize_hidden(index):\n",
+    "    plt.imshow(1.0 - V[:, index].reshape(28,28), cmap='gray')"
    ]
   },
   {
@@ -3410,7 +3449,11 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -3430,7 +3473,11 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -3450,7 +3497,11 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -3466,91 +3517,6 @@
    "source": [
     "visualize_hidden(37)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Attempt 2: looking at W"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 246,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30"
-      ]
-     },
-     "execution_count": 246,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 247,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.99449417, -1.98429933, -2.82371716, -3.48010878,  2.2579907 ,\n",
-       "       -0.64772248,  1.17105235,  2.33184894, -0.2572024 , -1.42756439,\n",
-       "       -1.18732571,  0.21992582,  2.30523504, -0.38174461, -2.38507171,\n",
-       "       -1.76656724,  2.20976963, -3.12920179,  0.82623126,  3.26569253,\n",
-       "       -1.1344759 ,  2.07066254, -3.0663163 , -0.46234842, -2.56397739,\n",
-       "        1.82419642, -0.43266411,  0.49476118, -1.61181721, -0.36083657,\n",
-       "       -7.69405401,  0.42256854, -2.02203338, -1.48895161, -1.18299701,\n",
-       "       -1.98468393, -0.73821824, -3.40928235,  2.79826419,  0.08400399,\n",
-       "       -1.38695132, -0.5522375 , -4.43110294,  0.28233517, -1.0401166 ,\n",
-       "       -0.19656483, -3.94314668,  0.90369211, -2.98258685, -0.28211424])"
-      ]
-     },
-     "execution_count": 247,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "W[:, 4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 248,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([39, 45, 11,  8, 49, 43, 29, 13, 31, 26, 23, 27, 41,  5, 36, 18, 47,\n",
-       "        0, 44, 20,  6, 34, 10, 40,  9, 33, 28, 15, 25,  1, 35, 32, 21, 16,\n",
-       "        4, 12,  7, 14, 24, 38,  2, 48, 22, 17, 19, 37,  3, 46, 42, 30])"
-      ]
-     },
-     "execution_count": 248,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.argsort(np.abs(W[:, 4]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
